@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.112 2005/03/27 06:27:19 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.113 2005/03/29 04:10:10 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  28 Mar 2005; Preston Cody <codeman@gentoo.org>
+  rewrote filesystem_tools.  hope it works.
+  
   26 Mar 2005; Preston Cody <codeman@gentoo.org>
   Changed the print statements to logging in the partitioning BE code.
   the logger may need to be imported to the x86archtemplate. unknown yet.
